2008-11-15	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-startup.c: Be sure to properly signal that
	  startup is complete when running from the failsafe session.

2008-11-15	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Fix autostart getting run twice when
	  the failsafe session is used (bug 4486).

2008-11-14  Stephan Arts <stephan@xfce.org>

	* NEWS, po/POTFILES.in, configure.in.in: Update files for 4.6 beta2
	  release

2008-11-12	Brian Tarricone <bjt23@cornell.edu>

	* settings/main.c: Hook up Help button.
	* settings/xfce4-session-settings.glade: Fix Help button response
	  and button order.
	* settings/xfce-session-settings.desktop.in: Mark dialog as
	  supporting startup notification.

2008-11-06	Brian Tarricone <bjt23@cornell.edu>

	* settings/xfce4-session.xml: Add xfce4-settings-helper to the
	  default failsafe session.

2008-11-06	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Fix a problem: client
	  requests interaction -> client is granted interaction ->
	  but now SM kills all other apps.  If the client then requests
	  that the shutdown is canceled, the SM doesn't listen, and
	  even if it did, nothing else would be running (including the
	  WM).  Problem was in xfsm_manager_check_clients_saving(): it
	  didn't consider a client waiting for interaction or interaction
	  to be saving (bug 4284).

2008-11-06	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Only one dbus ShutdownCancelled
	  signal is enough, really.  And I guess it wouldn't get sent
	  at all if <= 1 client was interacting.

2008-11-05	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/shutdown.c,doc/README.Kiosk: Add 'SaveShutdown'
	  kiosk capability that allows admins to restrict the ability to
	  save the session on logout (bug 2998).

2008-11-05	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-startup.c: Be sure to set the current