@@ -49,10 +49,10 @@ AC_PROG_LIBTOOL()
 dnl check for standard header files
 AC_HEADER_STDC
 AC_CHECK_HEADERS([asm/unistd.h errno.h fcntl.h limits.h \
-                  netdb.h signal.h stdarg.h sys/param.h sys/resource.h \
+                  netdb.h pwd.h signal.h stdarg.h sys/param.h sys/resource.h \
                   sys/socket.h sys/time.h sys/wait.h sys/utsname.h time.h \
                   unistd.h])
-AC_CHECK_FUNCS([getaddrinfo gethostbyname gethostname setsid \
+AC_CHECK_FUNCS([getaddrinfo gethostbyname gethostname getpwuid setsid \
                 sigaction strdup sync vfork])
 
 dnl Check for X11 installed
