@@ -1,3 +1,9 @@
+2008-11-27	Brian Tarricone <bjt23@cornell.edu>
+
+	* configure.in.in: Check for pwd.h and getpwuid ().
+	* xfce4-session/shutdown.c: Display the currently logged-in user
+	  in a label in the shutdown dialog.
+
 2008-11-15	Brian Tarricone <bjt23@cornell.edu>
 
 	* xfce4-session/xfsm-startup.c: Be sure to properly signal that
